# ai-telegram-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/bot/: ai_client.py  config.py  handlers.py  main.py  memory.py  rate_limiter.py  tools.py  utils.py
tests/: conftest.py  test_ai_client.py  test_config.py  test_handlers.py  test_memory.py  test_rate_limiter.py  test_tools.py  test_utils.py
